2007-10-10  Eli Zaretskii  <eliz@gnu.org>

	* dir.c (find_directory) [WINDOWS32]: Remove trailing slashes from
	pathnames, with const strings.
	* build_w32.bat [WINDOWS32]: If no config.h.W32 exists, create one
	from the template (used for building from CVS, not a dist).

2007-10-10  Paul Smith  <psmith@gnu.org>

	* make.h: Add a prototype for w32_kill() (change suggested by
	Yongwei Wu <wuyongwei@gmail.com>).

2007-09-21  Eli Zaretskii  <eliz@gnu.org>

	* w32/pathstuff.c (convert_Path_to_windows32): Handle quoted
	directories in Path.

2007-08-15  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (GNU Free Documentation License): The fdl.texi
	file has had the section info removed, so add some to make.texi
	before we include it.

2007-08-15  Icarus Sparry  <savannah@icarus.freeuk.com>

	* remake.c (check_dep): Reset the target state for intermediate
	files.  They might have been considered before but not updated
	then (order-only for example) but they will be this time.
	Fixes Savannah bug #'s 3330 and 15919.

2007-07-21  Eli Zaretskii  <eliz@gnu.org>

	Fix Savannah bug #20549:
	* function.c (func_shell): Call construct_command_argv with zero
	value of FLAGS.
	* job.c (construct_command_argv_internal): New argument FLAGS; all
	callers changed.
	[WINDOWS32]: If FLAGS has the COMMANDS_RECURSE bit set, ignore
	just_print_flag.
	* job.h (construct_command_argv_internal): Update prototype.

2007-07-13  Paul Smith  <psmith@gnu.org>

	* file.c (expand_deps): Use variable_buffer as the start of the
	buffer, not the original pointer (in case it was reallocated).
	Fix suggested by Rafi Einstein <rafi.einstein@formalism-labs.com>.
	Fixes Savannah bug #20452.

2007-07-04  Paul Smith  <psmith@gnu.org>

	* (ALL FILES): Update to GPLv3.
	* (ALL FILES): Update copyright for 2007.

	* main.c (print_version): Move the host type info to the second line.

2007-06-29  Thiemo Seufer  <ths@mips.com>

	* maintMakefile: Update Translation Project location.
